# lab616

./: .gitexclude  .gitignore  .gitmodules  .screenrc  README.mdown
app-scalatrader/: .classpath  .project  pom.xml
app-scalatrader/.externalToolBuilders/: New_Builder.launch
app-scalatrader/.manager/: _$_Users_$_david_$_lab616_$_app-scalatrader_$_src_$_main_$_scala_$_com_$_lab616_$_app_$_ProtoTrader.scala  _$_Users_$_david_$_lab616_$_app-scalatrader_$_src_$_main_$_scala_$_com_$_lab616_$_trading_$_quote_$_TickData.scala  _$_Users_$_david_$_lab616_$_app-scalatrader_$_src_$_test_$_scala_$_com_$_lab616_$_trading_$_quote_$_TickDataTest.scala  _$_Users_$_david_$_lab616_$_app-scalatrader_$_src_$_test_$_scala_$_lab616_$_app_$_AppTest.scala
aws/: #rebundle-ami.sh#  .classpath  bundle-ami.sh  ec2  ec2-tools  setup.sh  test
aws/.account/: access-key-id  cert-EQQBM3IKMMJCI4RMXN7CH4ZRGHQSLSXI.pem  secret-access-key
aws/.ami/: karmic-32  karmic-64  nx-vnc-jdk1.6-git-v1
aws/.instance/: dev  devlarge  test
cmake-common/: CMakeLists.macros  Init.cmk  boost.cmk  emacs.cmk  functions.cmk  macros.cmk  settings.cmk  testing.cmk
common/: .classpath
common-protos/: CMakeLists.txt  trades.proto
common-protos/trading/: CMakeLists.txt  trades.pb.cc  trades.pb.h
cpp-ib/: CMakeLists.txt  README.mdown  crontab  project.el  project.el.in
cpp-ib-marketdata/: CMakeLists.txt
cpp-ib-marketdata/src/: MarketDataClient.h
cpp-ib-tws/: CMakeLists.txt  README
cpp-ib-tws/src/: CMakeLists.txt
cpp-ib-tws/src/client/: SimpleClient.cpp  SimpleClient.h.in  TwsClient.h
cpp-ib-tws/test/: AllTests.cpp  CMakeLists.txt
cpp-ib-tws/test/mocks/: MockEClient.h
cpp-ib-twsapi/: CMakeLists.macros  CMakeLists.txt  Makefile  Makefile.orig  README
cpp-ib-twsapi/src/: CMakeLists.txt  api
cpp-ib-twsapi/src/client/: SimpleClient.cpp  SimpleClient.h  SimpleClientMain.cpp
cpp-ib-twsapi/test/: CMakeLists.txt
cpp-ib-twsapi/test/client/: ClientTest.cpp  SimpleClientTest.cpp
cpp-ib-twsapi/test/mocks/: MockEWrapper.h
cpp-ib/conf/: bookdata  tickers
cpp-ib/lua/: test.lua
cpp-ib/prototype/: CMakeLists.txt  NtpClient.hpp  NtpClientMain.cpp  VarzMain.cpp  asio_echo_client.hpp  asio_echo_server.hpp  asio_http.hpp  asio_main.cpp  asio_tick_client.hpp  asio_tick_server.hpp  luabind_main.cpp  mongoose_prototype.cpp  protocurses_main.cpp  quantlib_main.cpp  varz.cpp  varz.hpp  varz_test.cpp  varz_test.hpp  zmq_prototype.cpp
cpp-ib/prototype/www/: dynamic.html  varz.html
cpp-ib/prototype/www/js/: varz.js
cpp-ib/src/: CMakeLists.txt  README  README.mdown  adapter_main.cpp  common.hpp  messaging.hpp  utils.hpp
cpp-ib/src/ib/: CMakeLists.txt  README  adapters.cpp  adapters.hpp  backplane.cpp  backplane.hpp  bridge.cpp  bridge.hpp  bridge_constants.h.in  bridge_v964.cpp  bridge_v964.h  bridge_v964.hpp  cl.cpp  helpers.hpp  ib_actions.proto  ib_bridge.hpp  ib_common.proto  ib_events.proto  main.cpp  marketdata.cpp  marketdata.hpp  polling_client.cpp  polling_client.hpp  services.hpp  session.cpp  session.hpp  thread_client.cpp  ticker_id.cpp  ticker_id.hpp
cpp-ib/src/ib/api/: CMakeLists.txt
cpp-ib/src/ib/client/: CMakeLists.txt  SimpleClient.cpp  SimpleClient.cpp.in  SimpleClient.h  SimpleClient.h.in  SimpleClientMain.cpp  constants.h.in
cpp-ib/src/ib/logger/: CMakeLists.txt  logger_main.cpp
cpp-ib/src/ib/logreader/: CMakeLists.txt  logreader_main.cpp
cpp-ib/src/ib/tools/: CMakeLists.txt  command_line_client.cpp  constants.hpp.in  ib_client.cpp  internal.hpp  print_wrapper.cpp
cpp-ib/src/ib/util/: CMakeLists.txt  command_line_client.cpp  constants.hpp.in  ib_client.cpp  internal.hpp  log_client.hpp  log_common.h  log_wrapper.hpp  pipeline.cpp  pipeline.hpp  print_wrapper.cpp
cpp-ib/test/ib/: AllTests.cpp  CMakeLists.txt  adapter_test.cpp  backplane_test.cpp  fastflow_prototype.cpp  helpers_test.cpp  signals_prototype.cpp  utils_test.cpp
cpp-ib/test/ib/client/: AllTests.cpp  CMakeLists.txt  ClientTest.cpp  SimpleClientTest.cpp
cpp-ib/test/ib/mocks/: CMakeLists.txt  MockEClient.h.in  MockEWrapper.h.in
cpp-lua/: CMakeLists.txt  README.mdown  project.el.in
cpp-lua/src/: CMakeLists.txt
cpp-lua/test/: CMakeLists.txt
cpp-mdf/: CMakeLists.txt  README.mdown
cpp-prototype/: CMakeLists.txt
cpp-prototype/src/: AllTests.cpp  CMakeLists.txt
cpp-prototype/src/fastflow/: CMakeLists.txt
cpp-prototype/src/signals/: CMakeLists.txt
cpp-prototype/src/tbb/: AllTests.cpp  CMakeLists.txt  tbb_prototype.cpp
cpp-tdb/: CMakeLists.txt
cpp-tdb/src/: CMakeLists.txt
cpp-tdb/src/tickdb/: CMakeLists.txt  main.cpp  tickdb.cpp  tickdb.hpp  tickdb_format.proto  utils.cpp  utils.hpp
cpp-tdb/test/: CMakeLists.txt
cpp-tdb/test/tickdb/: CMakeLists.txt  prototype.cpp  tickdb_test.cpp  utils_test.cpp
deploy/: README  borg  template-server.sh  template-tool.sh  template.sh
deploy/accounts/: lab616.id_dsa  lab616.id_dsa.pub  ubuntu.id_dsa
docs/cpp/: Google C++ Primer.html  Overview of Important Abstractions and Data Structures.html
docs/emacs/: EmacsQuickReference.html
experimental/: CMakeLists.txt
experimental/src/: CMakeLists.txt  common.hpp  data.proto
experimental/tbb_context_filter/: pipeline.cpp  pipeline.h
ib/: .classpath  .project  build.xml
ib/.externalToolBuilders/: AvroBuilder-ib.launch  protoc.launch
ib/java/: domain.proto
ib/schema/: domain.avpr
lab616-common/: .classpath  .project  pom.xml
lab616-omnibus/: .classpath  .project  pom.xml
lab616-trading/: .classpath  .project  pom.xml
lab616-trading/.externalToolBuilders/: MavenBuilder.launch
lab616-trading/testing/: 2009-10-25-DU15228-2.proto  etrade-2009-gainloss.csv  etrade-2009-trades.csv  unittest.proto
lab616-tws/: .classpath  .project  pom.xml
omnibus/: .classpath  .project  README  build.xml  ivy.xml
omnibus/.externalToolBuilders/: AvroBuilder.launch
sandbox/JBookTrader-7/: build.xml
sandbox/JSystemTrader-6.24/: build.xml
scripts/: apitest-setup.sh  apitest-tickers.sh  bash_profile  build.sh
simulator/: .classpath  README
trading/: .classpath  .project
tws/: .classpath  .project
(+574 files in other folders)
